Resolves: fdo#59586 Missing comma in particular PDF file

regression from d9e4c74811855de15f1bf2045c2c9b061a2d4dc6

- if ( LANGUAGE_KOREAN != aLang && LANGUAGE_KOREAN_JOHAB != aLang )
+ if (MsLangId::isKorean(aLang))

should obviously have been

- if ( LANGUAGE_KOREAN != aLang && LANGUAGE_KOREAN_JOHAB != aLang )
+ if (!MsLangId::isKorean(aLang))

Change-Id: I5d4407729c46111fc080e24b6a86d6740faa0f81